# db_data_in_out

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: export_config.yml  load_config.yml
db_data_in_out/: __main__.py  check_service.py  export_service.py  load_data_service.py  main.py
system_folder/: EXPORT_postgres_rilievi_telecamere_2024-11-07 11:12:06.002065.xlsx
system_folder/admin_import_data_complete/: postgres_rilievi_telecamere_2024-10-30 16:52:35.993317.xlsx
