[tool.poetry]
name = "db-data-in-out"
version = "0.1.0"
description = ""
authors = ["MDiRocco <marc.dirocco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
